--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,7 +1,8 @@
-.DS_Store
-node_modules
-/dist
+# package log
+package-lock.json
 
+# node modules
+node_modules
 
 # local env files
 .env.local
@@ -21,3 +22,7 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+
+# misc
+.DS_Store
+/dist
